# learn-rust

./: Cargo.toml  LICENSE  README.md
day1/: day1.md
day1/httpie/: Cargo.toml
day1/httpie/src/: main.rs
day1/scrape_url/: Cargo.toml
day1/scrape_url/src/: main.rs  tests.rs
httpie/: Cargo.toml
httpie/src/: main.rs
scrape_url/src/: tests.rs
