[package]
name = "httpie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
structopt = { version = "0.3", default-features = false }
colored = "2"
jsonxf = "1.1"
mime = "0.3"
reqwest = {version = "0.11",features = ["json"]}
tokio = { version = "1", features = ["full"]}
syntect = "4.4"